--- a/package.json
+++ b/package.json
@@ -1,6 +1,30 @@
 {
   "dependencies": {
+    "@fastify/autoload": "^5.7.1",
+    "boom": "^7.3.0",
     "fastify": "^4.15.0",
+    "fastify-swagger": "^5.2.0",
     "mongoose": "^7.0.3"
-  }
+  },
+  "name": "mongodb-fastify-uvity",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "scripts": {
+    "dev": "nodemon src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JorgeGrandett/back-uvity-technical-test.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JorgeGrandett/back-uvity-technical-test/issues"
+  },
+  "homepage": "https://github.com/JorgeGrandett/back-uvity-technical-test#readme",
+  "description": ""
 }
