--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.7.1",
     "boom": "^7.3.0",
+    "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
     "fastify-swagger": "^5.2.0",
     "mongoose": "^7.0.3"
